# CreativeAI-Studio

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: __init__.py  conversation.py  generation.py
backend/app/providers/: __init__.py  base.py  gemini_api.py  vertex_ai.py
backend/app/routers/: conversation.py  image.py  settings.py  video.py
backend/app/schemas/: conversation.py  generation.py
backend/app/services/: conversation_service.py  image_service.py  video_service.py
backend/app/utils/: file_storage.py
backend/src/creativeai_studio/: asset_store.py  config.py  db.py  gcs.py  main.py  media_meta.py  model_catalog.py  runner.py  validation.py
backend/tests/: test_assets_api.py  test_config.py  test_ctx_injection.py  test_db_init.py  test_google_provider_edit_image.py  test_google_provider_facade.py  test_google_provider_gemini_image.py  test_google_provider_gemini_reference.py  test_google_provider_image.py  test_google_provider_video.py  test_health.py  test_jobs_clone_api.py  test_jobs_validation.py  test_main_google_provider_wiring.py  test_media_meta.py  test_model_catalog.py  test_models_api.py  test_providers_package_exports.py  test_repos_smoke.py  test_runner_image_generate.py  test_runner_image_generate_volcengine.py  test_runner_image_reference.py  test_runner_requeues_queued.py  test_runner_video_extend.py  test_runner_video_generate.py  test_settings_api.py  test_settings_bucket_validation.py  test_volcengine_ark_provider.py
(+68 files in other folders)
